--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink='/Certificaciones/BIM' style="color:#ffffff">Certificaciones</a>
+        <a class="nav-link" routerLink='/Certificaciones/BIM' style="color:#ffffff">Proyectos - BAU</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='' style="color:#ffffff">Envio de ordenes</a>
