--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,13 +15,13 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ">
       <li class="nav-item">
-        <a class="nav-link" routerLink='/Certificaciones/BIM' style="color:#ffffff">Proyectos | BAU</a>
+        <a class="nav-link" routerLink='' style="color:#ffffff">Proyectos | BAU</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='' style="color:#ffffff">Tickets</a>
+        <a class="nav-link" routerLink='/Certificaciones/Devoluciones' style="color:#ffffff">Tickets</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='/Certificaciones/Devoluciones' style="color:#ffffff">Reporte DC</a>
+        <a class="nav-link" routerLink='/Certificaciones/BIM' style="color:#ffffff">Reporte DC</a>
       </li>
     </ul>
     <ul class="navbar-nav  ms-auto">
