--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <a class="nav-link" routerLink='' style="color:#ffffff">Proyectos | BAU</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='/Certificaciones/Devoluciones' style="color:#ffffff">Tickets</a>
+        <a class="nav-link" routerLink='Certificaciones/Envio' style="color:#ffffff">Tickets</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='/Certificaciones/BIM' style="color:#ffffff">Reporte DC</a>
