--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -8,11 +8,11 @@
                         <div class="card">
                             <div class="card-body">
                                 <h6 class="card-title">Agregar Proyecto</h6>
-                                <div class="row">
+                                <div class="row" *ngIf="ocultar == false" >
                                     <div class="col-2">
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="proyectobau"
-                                                [(ngModel)]="orpNumeroDev" />
+                                                [(ngModel)]="orpNumeroDev"  />
                                             <label for="fecFin">Proyecto - BAU</label>
                                         </div>
                                     </div>
@@ -76,17 +76,20 @@
                                     </div>
 
                                     <div class="col-1 ">
-                                        <button class="btn btn-success mt-3" (click)="chkDevoluciones()">
-                                            Retornar
+                                        <button class="btn btn-success mt-3"  [disabled]="habilitarBoton ? true : false" >
+                                            Agregar
                                         </button>
                                     </div>
-
-                                    <div class="col-2 mt-2 right">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="23.616" height="13.503" viewBox="0 0 23.616 13.503">
-                                            <path id="Icon_ionic-ios-arrow-down" data-name="Icon ionic-ios-arrow-down" d="M18,20.679l8.93-8.937a1.681,1.681,0,0,1,2.384,0,1.7,1.7,0,0,1,0,2.391L19.2,24.258a1.685,1.685,0,0,1-2.327.049L6.68,14.14a1.688,1.688,0,0,1,2.384-2.391Z" transform="translate(-6.188 -11.246)" fill="#024e4f"/>
-                                        </svg>
-                                    </div>
-
+                                </div>
+                                <div class="col-2 right" (click)="showData()" *ngIf="ocultar == true">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23.616" height="13.503" viewBox="0 0 23.616 13.503">
+                                        <path id="Icon_ionic-ios-arrow-down" data-name="Icon ionic-ios-arrow-down" d="M18,20.679l8.93-8.937a1.681,1.681,0,0,1,2.384,0,1.7,1.7,0,0,1,0,2.391L19.2,24.258a1.685,1.685,0,0,1-2.327.049L6.68,14.14a1.688,1.688,0,0,1,2.384-2.391Z" transform="translate(-6.188 -11.246)" fill="#024e4f"/>
+                                    </svg>
+                                </div>
+                                <div class="col-2 right" (click)="hideData()" *ngIf="ocultar == false">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23.619" height="13.503" viewBox="0 0 23.619 13.503">
+                                        <path id="Icon_ionic-ios-arrow-up" data-name="Icon ionic-ios-arrow-up" d="M18,15.321l8.93,8.937a1.688,1.688,0,1,0,2.384-2.391L19.2,11.742a1.685,1.685,0,0,0-2.327-.049L6.68,21.86a1.688,1.688,0,0,0,2.384,2.391Z" transform="translate(-6.188 -11.251)" fill="#024e4f"/>
+                                    </svg>                                      
                                 </div>
                             </div>
                         </div>
@@ -288,5 +291,6 @@
         position: absolute;
         right: 0;
         top: center;
+        margin-right: 10px;
     }
 </style>
