--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -2,7 +2,7 @@
     <div class="col-12 mb-5">
         <div class="card">
             <div class="card-body">
-                <!--Conexion-->
+                <!--Agregar Proyecto-->
                 <div class="row">
                     <div class="col-12">
                         <div class="card">
@@ -290,6 +290,14 @@
                                 </tbody>
                             </table>
                         </div>
+                    </div>
+                    <div class="col-2 ">
+                        <button (click)="guardarCambio()" class="btn btn-primary">
+                            Guardar Cambio
+                        </button>
+                        <button (click)="cerrarSemana()" class="btn btn-success mx-3">
+                            Cerrar Seman
+                        </button>
                     </div>
                 </div>
                 <!--Fin Tabla-->
