Get All Proyects

--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -678,7 +678,7 @@
         </div>
     </div>
 </div>
-
+<!-- Modal Agregar Tarea-->
 <div class="modal fade" id="exampleModalAddTarea" style="height: 420px;"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document" >
         <div _ngcontent-fhe-c21="" class="modal-content">
